syntax = "proto3";

option csharp_namespace = "Soa.Protos";

package Soa.Protos;

service UserService {
  rpc GetUserPreferences (UserRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
}

message UserRequest {
  string user_id = 1;
}

message CreateUserRequest {
  string user_id = 1;
  repeated string preferences = 2;
}

message UserResponse {
  string user_id = 1;
  repeated string preferences = 2;
}